src/pages/ticket_details/TicketDetails.module.css
.main-container-row {
    display: flex;
    height: 100%;
    width: 100%;
    border-radius: 5px;
    background-color: #fafafa;
    border: 1px solid rgba(0, 0, 0, 0.1);
}

.left-container {
    display: flex;
    flex-direction: column;
    padding: 15px 25px;
    height: calc(100vh - 120px);
    width: 300px;
    word-break: break-word;
    overflow-y: auto;
    background-color: #fff;
}

.right-container {
    display: flex;
    flex-direction: column;
    height: 100%;
    width: 100%;
}
.ticket-conversation-container {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: calc(100vh - 280px);
    overflow-y: auto;
}

.ticket-conversation-col {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 5px;
    height: 100%;
}

.ticket-conversation-col > div:first-child {
    display: flex;
    flex-direction: column;
    gap: 5px;
}

.ticket-title {
    padding: 10px 50px;
    background-color: #f1efef;
    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
}

.ticket-header {
    font-weight: 600;
    font-size: 1rem;
    padding-bottom: 1rem;
}

.ticket-header-underline {
    border-bottom: 1px solid black;
}

.ticket-header-content {
    display: flex;
    flex-direction: column;
    gap: 2px;
    font-size: 15px;
    padding-bottom: 5px;
}

.ticket-header-break-line {
    border-top: 1px solid rgba(0, 0, 0, 0.1);
    padding-bottom: 15px;
}

.ticket-subheader {
    font-weight: 500;
    font-size: 1rem;
    padding-bottom: 1px;
}

.ticket-subheader + p{
    padding-bottom: 15px;
    color: #5d5d5d;
}

.ticket-title-text {
    font-size: 1.5rem;
    font-weight: 600;
}

.ticket-details-row {
    display: flex;
    justify-content: space-between;
}

.ticket-details-row > div:nth-child(2) {
    display: flex;
    gap: 10px;
}

.ticket-title > .ticket-details-row:nth-child(2) {
    justify-content: flex-start;
    align-items: center;
    gap: 10px;
    padding-top: 5px;
}

.ticket-number-bubble {
    border: 1px solid rgba(0, 0, 0, 0.1);
    border-radius: 5px;
    padding: 1px 5px;
    font-weight: 600;
    font-size: 0.9rem;
}

.ticket-container-footer {
    display: flex;
    width: 100%;
    height: auto;
    justify-content: flex-end;
    align-items: center;
    padding: 15px 50px;
    margin-top: 10px;
    border-top: 1px solid rgba(0, 0, 0, 0.1);
}

.ticket-container-footer button {
    padding: 5px 10px;
    box-shadow: 0 0 0 0;
    font-weight: 400;
    font-size: 0.9rem;
}

.ticket-contact-user {
    font-weight: bold;
    font-size: 1.2rem;
}

.ticket-title .ticket-details-row button {
    padding: 5px 10px;
    box-shadow: 0 0 0 0;
    font-weight: 400;
    font-size: 0.9rem;
}

